fix overflow hidden on main page

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,4 @@ input {
   color-scheme: dark;
 }
 
-html {
-  overflow: hidden;
-}
+
